--- a/src/index/index.html
+++ b/src/index/index.html
@@ -13,6 +13,7 @@
     <a href="./lesson_5.html">Lesson 5</a>
     <a href="./lesson_6.html">Lesson 6</a>
     <a href="./lesson_7.html">Lesson 7</a>
+    <a href="./hw_7.html">Home work №7</a>
 </body>
 
 </html>
