--- a/src/hw_7/hw_7.html
+++ b/src/hw_7/hw_7.html
@@ -12,33 +12,83 @@
 
 <body>
 
-    <nav class="page-nav ">
 
+    <section class="main">
         <div class="container">
+            <div class="main__menu">
+                <nav class="page-nav ">
 
-            <div class="page-nav__header">autocryp</div>
+                    <div class="page-nav__header">autocryp</div>
 
-            <ul class="page-nav__menu">
-                <li class="page-nav__item">
-                    <a href="" class="page-nav__link">Benefits</a>
-                </li>
-                <li class="page-nav__item">
-                    <a href="" class="page-nav__link">Pricing</a>
-                </li>
-                <li class="page-nav__item">
-                    <a href="" class="page-nav__link">Testimonials</a>
-                </li>
-                <li class="page-nav__item">
-                    <a href="" class="page-nav__link">Client</a>
-                </li>
-            </ul>
-            <div class="page-nav__buttons">
-                <button class="button">Login</button>
-                <button class="btn btn_position">Register</button>
+                    <ul class="page-nav__menu">
+                        <li class="page-nav__item">
+                            <a href="" class="page-nav__link">Benefits</a>
+                        </li>
+                        <li class="page-nav__item">
+                            <a href="" class="page-nav__link">Pricing</a>
+                        </li>
+                        <li class="page-nav__item">
+                            <a href="" class="page-nav__link">Testimonials</a>
+                        </li>
+                        <li class="page-nav__item">
+                            <a href="" class="page-nav__link">Client</a>
+                        </li>
+                    </ul>
+                    <div class="page-nav__buttons">
+                        <button class="button">Login</button>
+                        <button class="btn btn_position">Register</button>
+                    </div>
+                </nav>
             </div>
 
+            <div class="main__concept">
+                <div class="main__column">
+                    <div class="main__content">
+                        <h1 class="main__header">Easiest way to mining your bitcoin</h1>
+                        <p class="main__text">Autocryp is the place to buy and sell Bitcoin, Ethereum and various kinds of Digital Assets in Indonesia. Then, book your weekly, bi-weekly or one-off clean online with imminent confirmation.</p>
+
+                        <button class="btn main__button">Get Started</button>
+
+                    </div>
+                </div>
+                <div class="main__column">
+                    <div class="maim__image">
+                        <img class="image" src="../../assets/images/hw_7/Artboard.png" alt="">
+                    </div>
+                </div>
+
+            </div>
         </div>
-    </nav>
+    </section>
+    <section class="advantages">
+        <div class="advantages__column">
+            <div class="advantages__icon">
+                <img src="../../assets/images/hw_7/photo.png" alt="" class="icon">
+            </div>
+            <h1 class="advantages__header">Secure Every Transaction</h1>
+            <div class="advantages__line"></div>
+            <p class="advantages__text">Your account is protected by Multifactor Authentication using a combination of email, SMS and Google Authenticator.</p>
+        </div>
+        <div class="advantages__column">
+            <div class="advantages__icon">
+                <img src="../../assets/images/hw_7/use.png" alt="" class="icon">
+            </div>
+            <h1 class="advantages__header">Easiest To Use</h1>
+            <div class="advantages__line"></div>
+            <p class="advantages__text">You only need 1 account to do all Bitcoin transactions whether it is buying, selling, investing or trading.</p>
+        </div>
+        <div class="advantages__column">
+            <div class="advantages__icon">
+                <img src="../../assets/images/hw_7/mining.png" alt="" class="icon">
+            </div>
+            <h1 class="advantages__header">Fastest Mining</h1>
+            <div class="advantages__line"></div>
+            <p class="advantages__text">The Rupiah deposit can be processed instantly and Rupiah withdrawal is processed in less than 1 business day.</p>
+        </div>
+    </section>
+    <section class="secondary">
+
+    </section>
 
 </body>
 
